--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,1 +1,1 @@
-SConscript('SConscript', variant_dir='build', src='.', duplicate=0)
+SConscript('SConscript', variant_dir='../build', src='.', duplicate=0)
